add catalog gRPC client in the basket service
