# services/basket-service/docs/swagger.json
@@ -34,7 +34,7 @@
                     }
                 }
             },
-            "patch": {
+            "put": {
                 "produces": [
                     "application/json"
                 ],
@@ -42,12 +42,12 @@
                 "operationId": "update-users-cart",
                 "parameters": [
                     {
-                        "description": "patch cart data",
+                        "description": "put cart data",
                         "name": "data",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.patchCartRequest"
+                            "$ref": "#/definitions/handlers.putCartRequest"
                         }
                     }
                 ],
@@ -63,8 +63,8 @@
         }
     },
     "definitions": {
-        "handlers.patchCartInput": {
-            "description": "Patch cart input",
+        "handlers.putCartInput": {
+            "description": "PUT cart input",
             "type": "object",
             "required": [
                 "product_id",
@@ -79,8 +79,8 @@
                 }
             }
         },
-        "handlers.patchCartRequest": {
-            "description": "Patch cart data",
+        "handlers.putCartRequest": {
+            "description": "PUT cart data",
             "type": "object",
             "required": [
                 "items"
@@ -89,7 +89,7 @@
                 "items": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/handlers.patchCartInput"
+                        "$ref": "#/definitions/handlers.putCartInput"
                     }
                 }
             }
